manifests/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    #alb.ingress.kubernetes.io/security-groups: <...>
spec:
  rules:
    - http:
        paths:
          - path: /passes
            pathType: Prefix
            backend:
              service:
                name: pass-api
                port:
                  number: 8080
          - path: /pass-summary
            pathType: Prefix
            backend:
              service:
                name: pass-summary-api
                port:
                  number: 8080
